--- a/vendas.html
+++ b/vendas.html
@@ -1,19 +1,30 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Controle de Venda de Farinhas</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
+
 <body>
     <div class="container mt-5">
+        <div class="d-flex justify-content-end mb-2">
+            <button id="btnSair" class="btn btn-outline-secondary">Sair</button>
+        </div>
         <h1 class="mb-4">Controle de Vendas</h1>
         <div class="card card-body mb-4">
             <form id="formVenda">
                 <div class="row">
                     <div class="col-md-6 mb-3"><label for="cliente" class="form-label">Nome do Cliente</label><input type="text" class="form-control" id="cliente" required></div>
-                    <div class="col-md-6 mb-3"><label for="farinha" class="form-label">Nome da Farinha</label><select class="form-select" id="farinha" required><option value="" disabled selected>Selecione uma farinha</option><option value="Vó zane extra clara 0000">Vó zane extra clara 0000</option><option value="Vó zane panificação premium">Vó zane panificação premium</option><option value="Pré-mistura Vó zane extra clara 0000">Pré-mistura Vó zane extra clara 0000</option><option value="Hermann pães especiais">Hermann pães especiais</option></select></div>
+                    <div class="col-md-6 mb-3"><label for="farinha" class="form-label">Nome da Farinha</label><select class="form-select" id="farinha" required>
+                            <option value="" disabled selected>Selecione uma farinha</option>
+                            <option value="Vó zane extra clara 0000">Vó zane extra clara 0000</option>
+                            <option value="Vó zane panificação premium">Vó zane panificação premium</option>
+                            <option value="Pré-mistura Vó zane extra clara 0000">Pré-mistura Vó zane extra clara 0000</option>
+                            <option value="Hermann pães especiais">Hermann pães especiais</option>
+                        </select></div>
                 </div>
                 <div class="row">
                     <div class="col-md-3 mb-3"><label for="quantidade" class="form-label">Quantidade</label><input type="number" class="form-control" id="quantidade" step="1" min="1" required></div>
@@ -54,8 +65,9 @@
             </tfoot>
         </table>
     </div>
-    
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="app.js" type="module" defer></script>
 </body>
+
 </html>
